add blur class, fix fqa deco

--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
         <h2 class="title">schedule <span>for you</span></h2>
         <div class="schedule-calendar">
           <div class="calendar">
+            <!-- add blur class to blur -->
             <div class="days">
               <ul class="days-list">
                 <li class="day">Mon</li>
